# CourseProject_3

./: .gitignore  README.md  pyproject.toml
project_development/: main.py  utils.py
tests/: test.json  test_utils.py
